--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.spring.dependency-management" version "1.0.7.RELEASE"
 }
 
 group 'org.example'
@@ -9,9 +10,18 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "io.projectreactor:reactor-bom:2023.0.0"
+    }
+}
+
 dependencies {
+    implementation 'io.projectreactor:reactor-core'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 test {
